--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-application.version=@project.version@
+tradex.app.version=@project.version@
+tradex.app.source=https://github.com/askmohanty/TradeX-App.git
+tradex.app.developer=https://github.com/askmohanty
